# cookiecutter-template

./: .gitignore  LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .gitignore  Makefile  README.md  pyproject.toml
{{cookiecutter.project_name}}/data/: .gitignore
