[tool.poetry]
name = "{{ cookiecutter.package_name }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
readme = "README.md"
packages = [{include = "{{ cookiecutter.package_name }}", from = "src"}]

[tool.poetry.dependencies]
python = "{{ cookiecutter.python_version }}"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
black = "23.7.0"
ruff = "0.0.292"

[build-system]
requires = ["poetry>=1.7.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
skip-string-normalization = true
exclude = "/(\\.git|\\.venv|build|dist|migrations)/"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "C", "I"]
ignore = ["E501"]
exclude = ["build", "dist", ".venv", ".mypy_cache"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.flake8-quotes]
quotes = "double"

[tool.ruff.isort]
combine_as_imports = true
force_sort_within_sections = true
known_first_party = ["{{ cookiecutter.package_name }}"]
